# Weiawaga

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: release.yml  rust.yml
src/: attacks.rs  bitboard.rs  board.rs  color.rs  diagonal.rs  file.rs  history_entry.rs  magics.rs  main.rs  moov.rs  move_list.rs  move_sorter.rs  move_sorting.rs  nnue.rs  nnue_weights.rs  perft.rs  piece.rs  rank.rs  search.rs  search_master.rs  see.rs  square.rs  timer.rs  traits.rs  tt.rs  types.rs  uci.rs  zobrist.rs
src/evaluation/: e_constants.rs  eval.rs  mod.rs  nnue.rs  nnue_weights.rs  score.rs
src/perft/: mod.rs  perft.rs
src/search/: mod.rs  move_scorer.rs  move_sorter.rs  search.rs  search_master.rs  see.rs  statistics.rs  timer.rs  tt.rs
src/texel/: mod.rs  parameter.rs  tuner.rs
src/types/: attacks.rs  bitboard.rs  board.rs  color.rs  diagonal.rs  file.rs  magics.rs  mod.rs  moov.rs  move_list.rs  piece.rs  rank.rs  square.rs  undo_info.rs  zobrist.rs
src/uci/: mod.rs  search_master.rs  uci.rs
