[package]
name = "Weiawaga"
authors = ["Heiaha"]
repository = "https://github.com/Heiaha/Weiawaga"
version = "5.0.0"
edition = "2021"
readme = "README.md"
rust-version = "1.63"

[dependencies]
arrayvec = "0.7.6"

[profile.release]
opt-level = 3
debug = false
rpath = false
debug-assertions = false
codegen-units = 1
lto = true
panic = "abort"
