[package]
name = "Weiawaga"
authors = ["Heiaha"]
repository = "https://github.com/Heiaha/Weiawaga"
version = "5.0.0"
edition = "2021"
readme = "README.md"
rust-version = "1.63"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
debug = false
rpath = false
debug-assertions = false
overflow-checks = false
panic = "abort"
strip = true