[package]
name = "Weiawaga"
authors = ["Heiaha"]
repository = "https://github.com/Heiaha/Weiawaga"
version = "5.0.0"
edition = "2024"
readme = "README.md"
rust-version = "1.85.0"

[dependencies]
arrayvec = "0.7.6"
regex = "1.11.1"
rand = "0.8.5"
wide = "0.7.32"

[profile.release]
opt-level = 3
debug = false
rpath = false
debug-assertions = false
codegen-units = 1
lto = true
panic = "abort"
